MCSnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mcs-prod-deny-all
  namespace: mcs-prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values:
          - kube-system
          - minio-prod
          - ingress-nginx
          - monitoring
    ports:
    - protocol: TCP
      port: 80

  egress:
  - to:
    # - podSelector:
    #     matchLabels:
    #       access: "true"
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values:
          - minio-prod
